--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
         <li><a href="/Online Shopping.html">Home</a></li>
        <li><a href="/Online Shopping.html">Favourites</a></li>
         <li><a href="/CBU Online Shopping /Chat.html">AI Assistant</a></li>
-        <li><a href="/CBU Online Shopping /Cart.html">My Shopping Cart</a></li>
+        <li><a href="cart.html">My Shopping Cart</a></li>
         <li><a href="/Online Shopping.html">Terms And Conditions</a></li>
         <li><a href="/Online Shopping.html">Our Privacy Policy</a></li>
         <li><a href="/Online Shopping.html">Help Center</a></li>
