--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
    <!-- Swiper Banner Section -->
    <div class="swiper">
        <div class="swiper-wrapper">
-           <div class="swiper-slide"><img src="/CBU Online Shopping /IMG-20250305-WA0007.jpg" alt="Ad 1"></div>
+           <div class="swiper-slide"><img src="IMG-20250108-WA0034.jpg" alt="Ad 1"></div>
            <div class="swiper-slide"><img src="/CBU Online Shopping /IMG-20241214-WA0029.jpg" alt="Ad 2"></div>
            <div class="swiper-slide"><img src="/CBU Online Shopping /IMG-20250305-WA0025.jpg" alt="Ad 3"></div>
        </div>
